--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ali-oss": "^4.11.4",
+    "bcrypt": "^1.0.3",
     "co": "^4.6.0",
     "cross-env": "^5.1.3",
     "debug": "^3.1.0",
