--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-body": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
+    "koa-jwt": "^3.3.0",
     "koa-logger": "^3.1.0",
     "koa-onerror": "^4.0.0",
     "koa-router": "^7.4.0",
