--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ali-oss": "^4.11.4",
-    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "co": "^4.6.0",
     "cross-env": "^5.1.3",
     "debug": "^3.1.0",
@@ -26,6 +26,7 @@
     "koa-logger": "^3.1.0",
     "koa-onerror": "^4.0.0",
     "koa-router": "^7.4.0",
+    "koa-sslify": "^2.1.2",
     "koa-static": "^4.0.2",
     "moment": "^2.20.1",
     "mongoose": "^5.0.2",
